To check error on LiveData

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".data.AddBook"
             android:label="@string/add_book_activity_title">
@@ -34,6 +35,14 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.android.bookcompanion.MyLibrary"/>
+        </activity>
+
+        <activity
+            android:name=".AddReadingTrack"
+            android:label="@string/add_readingTrack">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.android.bookcompanion.AddReadingTrack"/>
         </activity>
 
         <provider
