--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,5 +35,7 @@ dependencies {
     def room_version = "1.1.0"
     implementation "android.arch.persistence.room:runtime:$room_version"
     annotationProcessor "android.arch.persistence.room:compiler:$room_version"
+    implementation "android.arch.lifecycle:extensions:1.0.0"
+    annotationProcessor "android.arch.lifecycle:compiler:1.0.0"
 
 }
