--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -96,6 +96,15 @@
             android:name=".database.BookProvider"
             android:authorities="com.example.android.bookcompanion.books"
             android:exported="false" />
+
+        <receiver android:name=".widget.WidgetProvider" >
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data android:name="android.appwidget.provider"
+                android:resource="@xml/widget_info_provider" />
+        </receiver>
+
     </application>
 
 </manifest>
