--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,4 @@ org.gradle.jvmargs=-Xmx1536m
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 placeskey="AIzaSyBxiXHn5l4FQajLqd7LfiohHfEo5euOmNQ"
+ADMobClient="ca-app-pub-3940256099942544/6300978111"
