--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        myconfig {
+            keyAlias 'androidks'
+            keyPassword 'password'
+            storeFile file('C:/Users/casab/Desktop/Google Developer Nanodegree/BookCompanion/app/release/aks.jks')
+            storePassword 'password'
+        }
+    }
     compileSdkVersion 27
     defaultConfig {
         applicationId "com.example.android.bookcompanion"
@@ -14,18 +22,19 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            resValue "string","placekey", placeskey
-            resValue "string","idclient", ADMobClient
+            resValue "string", "placekey", placeskey
+            resValue "string", "idclient", ADMobClient
+            signingConfig signingConfigs.myconfig
         }
-        debug{
-            resValue "string","placekey", placeskey
-            resValue "string","idclient", ADMobClient
+        debug {
+            resValue "string", "placekey", placeskey
+            resValue "string", "idclient", ADMobClient
         }
     }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     testImplementation 'junit:junit:4.12'
@@ -39,12 +48,12 @@ dependencies {
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     def room_version = "1.1.0"
-    implementation "android.arch.persistence.room:runtime:1.1.0"
+    implementation 'android.arch.persistence.room:runtime:1.1.0'
     annotationProcessor "android.arch.persistence.room:compiler:1.1.0"
-    implementation "android.arch.lifecycle:extensions:1.1.1"
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
     annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
-    implementation "com.google.android.gms:play-services-places:15.0.1"
-    implementation "com.google.android.gms:play-services-location:15.0.1"
+    implementation 'com.google.android.gms:play-services-places:15.0.1'
+    implementation 'com.google.android.gms:play-services-location:15.0.1'
     implementation 'com.google.android.gms:play-services-auth:15.0.1'
     implementation 'com.google.android.gms:play-services-ads:15.0.1'
 }
